firefam-rs/tui/src/bottom_pane/request_user_input/snapshots/firefam_tui__bottom_pane__request_user_input__tests__request_user_input_options_notes_visible.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Choose an option.                                                                                                     
                                                                                                                        
  › 1. Option 1  First choice.                                                                                          
    2. Option 2  Second choice.                                                                                         
    3. Option 3  Third choice.                                                                                          
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  › Add notes                                                                                                           
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
                                                                                                   100% context left    
  tab or esc to clear notes | enter to submit answer
